--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ venv/
 
 # Python bytecode
 *.pyc
-__pychache__/
-helpers/__pychache__/
+app/__pychache__/
+app/helpers/__pychache__/
 
 # IDE files
 .vscode/
